--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/gzipped
+dist
+gzipped
 /tmp
-/out-tsc
-/storybook-static
+out-tsc
+storybook-static
 /docs
 /tests/kendo-themes/tests/visual/styles
 /cypress
@@ -14,7 +14,7 @@
 node_modules
 
 # IDEs and editors
-/.idea
+.idea
 .project
 .classpath
 .c9/
@@ -26,7 +26,7 @@ node_modules
 .vscode/*
 
 # misc
-/.sass-cache
+.sass-cache
 /connect.lock
 /coverage
 /libpeerconnection.log
