--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,11 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hooks-use-modal": "^2.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.44.0",
