--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "4.0.3",
     "sass": "^1.44.0",
     "typescript": "^4.5.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start --host 0.0.0.0",
