--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "^5.3.2",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,8 +23,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start --host 0.0.0.0",
-    "build": "react-scripts build",
+    "start": "HOST=0.0.0.0 react-scripts start",
+    "build": "BUILD_PATH='./app' react-scripts build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
